Remove link to ImageJ movie (not ported to 4.4)

--- a/omero-template.html
+++ b/omero-template.html
@@ -74,7 +74,7 @@
 			</li>
 			<li>
 				<p>
-					For the OMERO ImageJ plugin to work, uncompress the download and put the entire folder under the ImageJ/Fiji plugins folder. If you are using <a href="http://rsbweb.nih.gov/ij">ImageJ1</a>, you must also have loci_tools.jar installed in the <code>ImageJ/plugins</code> folder. It is available for download under <a href="http://www.openmicroscopy.org/site/products/bio-formats/downloads">Products &gt; Bio-Formats</a>. Watch the <a href="@SNAPSHOT_URL@/movies/omero-4-4/mov/ImageJ-4.4.mov">ImageJ Plugin Movie</a> for more details. (Note: if you are testing <a href="http://developer.imagej.net/">ImageJ2</a> then you should NOT add loci_tools.jar)
+					For the OMERO ImageJ plugin to work, uncompress the download and put the entire folder under the ImageJ/Fiji plugins folder. If you are using <a href="http://rsbweb.nih.gov/ij">ImageJ1</a>, you must also have loci_tools.jar installed in the <code>ImageJ/plugins</code> folder. It is available for download under <a href="http://www.openmicroscopy.org/site/products/bio-formats/downloads">Products &gt; Bio-Formats</a>. (Note: if you are testing <a href="http://developer.imagej.net/">ImageJ2</a> then you should NOT add loci_tools.jar)
 				</p>
 			</li>
 			<li>
