Allow to pass milestone by environment variable

--- a/omero-template.html
+++ b/omero-template.html
@@ -202,7 +202,7 @@
 			Full details of features and what is new can be found in the <a href="@ANNOUCEMENT_URL@">announcement</a>.
 		</p>
 		<p>
-			Full milestone release notes can be found on the <a href="http://trac.openmicroscopy.org.uk/ome/milestone/OMERO-@VERSION@">OMERO Trac site</a>
+			Full milestone release notes can be found on the <a href="http://trac.openmicroscopy.org.uk/ome/milestone/@MILESTONE@">OMERO Trac site</a>
 		</p>
 		<p>
 			This release includes:
