Fix legacy downloads URL

--- a/omero-template.html
+++ b/omero-template.html
@@ -337,7 +337,7 @@
 			Previous versions
 		</h2>
 		<p>
-			Previous versions of the OMERO software can be found on our <a href="legacy_downloads">Legacy Downloads</a> page.
+			Previous versions of the OMERO software can be found on our <a href="http://www.openmicroscopy.org/site/products/omero/legacy_downloads">Legacy Downloads</a> page.
 		</p>
 
 		<!-- OME Footer - Start -->
