Remove sentences about server upgrade from the downloads pages

--- a/omero-template.html
+++ b/omero-template.html
@@ -44,7 +44,7 @@
 			</li>
 			<li>
 				<p>
-					The OMERO server and client major versions <strong>must match</strong>, e.g. only @VERSION@ clients with the @VERSION@ server. Please upgrade appropriately using the instructions found on the <a href="@DOC_URL@/sysadmins/server-upgrade.html">OMERO upgrade</a> page.
+					The OMERO server and client major versions <strong>must match</strong>, e.g. only @VERSION@ clients with the @VERSION@ server.
 				</p>
 			</li>
 			<li>
@@ -144,11 +144,6 @@
 			<li>
 				<p>
 					After downloading the server, you may want to take a look at the installation guide for <a href="@DOC_URL@/sysadmins/unix/server-installation.html">Unix based platforms</a>, <a href="@DOC_URL@/sysadmins/windows/server-installation.html">Microsoft Windows</a> or using the <a href="@DOC_URL@/users/virtual-appliance.html">Virtual Appliance</a> .
-				</p>
-			</li>
-			<li>
-				<p>
-					If you want to upgrade your server, follow the upgrade <a href="@DOC_URL@/sysadmins/server-upgrade.html">instructions</a>.
 				</p>
 			</li>
 		</ul>
