--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -294,7 +294,7 @@ Windows</a> </p>
 		<div class="visualClear" id="clear-space-before-footer"><!-- --></div>
 		<div id="portal-footer">
 			<p>
-				<acronym title="Copyright">©</acronym>
+				<acronym title="Copyright">&copy;</acronym>
 				2000-2013
 				University of Dundee &amp; Open Microscopy Environment. <a href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing">Creative Commons Attribution 3.0 Unported License</a>
 			</p>
