Drop unwanted _URL at the end of token

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -75,7 +75,7 @@ clients with the 4.4 server</p>
         <td><a href="@WIN_CLIENTS@"><img src="images/windows_download.png" alt="Windows Client Download" /></a></td>
         <td align="center">63.3 MB</td>
         <td>@WIN_CLIENTS_BASE@</td>
-        <td align="center"><a href="@WIN_CLIENTS_URL@.md5">Download</a></td>
+        <td align="center"><a href="@WIN_CLIENTS@.md5">Download</a></td>
       </tr>
       <tr>
         <td><a href="@MAC_CLIENTS@"><img src="images/mac_download.png" alt="Mac OS X Client Download" /></a></td>
