Add tokens and logic to compute artifacts size

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -73,19 +73,19 @@ clients with the 4.4 server</p>
         </tr>
       <tr>
         <td><a href="@WIN_CLIENTS@"><img src="images/windows_download.png" alt="Windows Client Download" /></a></td>
-        <td align="center">63.3 MB</td>
+        <td align="center">@WIN_CLIENTS_SIZE@</td>
         <td>@WIN_CLIENTS_BASE@</td>
         <td align="center"><a href="@WIN_CLIENTS@.md5">Download</a></td>
       </tr>
       <tr>
         <td><a href="@MAC_CLIENTS@"><img src="images/mac_download.png" alt="Mac OS X Client Download" /></a></td>
-        <td align="center">184.8 MB</td>
+        <td align="center">@MAC_CLIENTS_SIZE@</td>
         <td>@MAC_CLIENTS_BASE@</td>
         <td align="center"><a href="@MAC_CLIENTS@.md5">Download</a></td>
         </tr>
       <tr>
         <td><a href="@LINUX_CLIENTS@"><img src="images/linux_download.png" alt="Linux Client Download" /></a></td>
-        <td align="center">102.7 MB</td>
+        <td align="center">@LINUX_CLIENTS_SIZE@</td>
         <td>@LINUX_CLIENTS_BASE@</td>
         <td align="center"><a href="@LINUX_CLIENTS@.md5">Download</a></td>
         </tr>
@@ -119,13 +119,13 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
         </tr>
       <tr>
         <td><a href="@IJ_CLIENTS@"><img src="images/imagej_download.png" alt="ImageJ-Fuji Plugin Download" /></a></td>
-        <td align="center">48.7 MB</td>
+        <td align="center">@IJ_CLIENTS_SIZE@</td>
         <td>@IJ_CLIENTS_BASE@</td>
         <td align="center"><a href="@IJ_CLIENTS@.md5">Download</a></td>
         </tr>
       <tr>
         <td><a href="@MATLAB_CLIENTS@"><img src="images/matlab_download.png" alt="Matlab Plugin Download" /></a></td>
-        <td align="center">79.7 MB</td>
+        <td align="center">@MATLAB_CLIENTS_SIZE@</td>
         <td>@MATLAB_CLIENTS_BASE@</td>
         <td align="center"><a href="@MATLAB_CLIENTS@.md5">Download</a></td>
         </tr>
@@ -168,19 +168,19 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
       </tr>
     <tr>
       <td><a href="@SERVER33@"><img src="images/ice3_3_download.png" alt="Ice 3.3 Server Download" /></a></td>
-      <td align="center">185.3 MB</td>
+      <td align="center">@SERVER33_SIZE@</td>
       <td>@SERVER33_BASE@</td>
         <td align="center"><a href="@SERVER33@.md5">Download</a></td>
       </tr>
     <tr>
       <td><a href="@SERVER34@"><img src="images/ice3_4_download.png" alt="Ice 3.4 Server Download" /></a></td>
-      <td align="center">202.6 MB</td>
+      <td align="center">@SERVER334_SIZE@</td>
       <td>@SERVER34_BASE@</td>
         <td align="center"><a href="@SERVER34@.md5">Download</a></td>
       </tr>
     <tr>
       <td><a href="@SERVER35@"><img src="images/ice3_5_download.png" alt="Ice 3.5 Server Download" /></a></td>
-      <td align="center">205.1 MB</td>
+      <td align="center">@SERVER35_SIZE@</td>
       <td>@SERVER35_BASE@</td>
         <td align="center"><a href="@SERVER35@.md5">Download</a></td>
       </tr>
@@ -216,7 +216,7 @@ Windows</a> </p>
       </tr>
     <tr>
       <td><a href="@VM@"><img src="images/virtual_app_download.png" alt="Virtual Appliance Download" /></a></td>
-      <td align="center">1.25 GB</td>
+      <td align="center">@VM_SIZE@</td>
       <td>@VM_BASE@</td>
         <td align="center"><a href="@VM@.md5" target="_blank">Download</a></td>
       </tr>
@@ -246,7 +246,7 @@ Windows</a> </p>
     </tr>
     <tr>
       <td><a href="@DOCS@"><img src="images/api_download.png" alt="API Documentation Download" /></a></td>
-      <td align="center">11.6 MB</td>
+      <td align="center">@DOCS_SIZE@</td>
       <td>@DOCS_BASE@</td>
         <td align="center"><a href="@DOCS@.md5">Download</a></td>
       </tr>
