--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -69,25 +69,25 @@ clients with the 4.4 server</p>
         <th width="269">Clients</th>
         <th width="85">Size</th>
         <th width="271">File Name</th>
-        <th width="125">MD5 Checksum</th>
+        <th width="125">Checksum</th>
         </tr>
       <tr>
         <td><a href="@WIN_CLIENTS@"><img src="images/windows_download.png" alt="Windows Client Download" /></a></td>
         <td align="center">@WIN_CLIENTS_SIZE@</td>
-        <td>@WIN_CLIENTS_BASE@</td>
-        <td align="center"><a href="@WIN_CLIENTS@.md5">Get checksum</a></td>
+        <td><a href="@WIN_CLIENTS@">@WIN_CLIENTS_BASE@</a></td>
+        <td align="center">@WIN_CLIENTS_MD5@ (<a href="@WIN_CLIENTS@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@MAC_CLIENTS@"><img src="images/mac_download.png" alt="Mac OS X Client Download" /></a></td>
         <td align="center">@MAC_CLIENTS_SIZE@</td>
-        <td>@MAC_CLIENTS_BASE@</td>
-        <td align="center"><a href="@MAC_CLIENTS@.md5">Get checksum</a></td>
+        <td><a href="@MAC_CLIENTS@">@MAC_CLIENTS_BASE@</a></td>
+        <td align="center">@MAC_CLIENTS_MD5@ (<a href="@MAC_CLIENTS@.md5">MD5</a>)</td>
         </tr>
       <tr>
         <td><a href="@LINUX_CLIENTS@"><img src="images/linux_download.png" alt="Linux Client Download" /></a></td>
         <td align="center">@LINUX_CLIENTS_SIZE@</td>
-        <td>@LINUX_CLIENTS_BASE@</td>
-        <td align="center"><a href="@LINUX_CLIENTS@.md5">Get checksum</a></td>
+        <td><a href="@LINUX_CLIENTS@">@LINUX_CLIENTS_BASE@</a></td>
+        <td align="center">@LINUX_CLIENTS_MD5@ (<a href="@LINUX_CLIENTS@.md5">MD5</a>)</td>
         </tr>
     </tbody>
   </table>
@@ -115,19 +115,19 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
         <th width="269">Plugins</th>
         <th width="87">Size</th>
         <th width="270">File Name</th>
-        <th width="124">MD5 Checksum</th>
+        <th width="124">Checksum</th>
         </tr>
       <tr>
         <td><a href="@IJ_CLIENTS@"><img src="images/imagej_download.png" alt="ImageJ-Fuji Plugin Download" /></a></td>
         <td align="center">@IJ_CLIENTS_SIZE@</td>
-        <td>@IJ_CLIENTS_BASE@</td>
-        <td align="center"><a href="@IJ_CLIENTS@.md5">Get checksum</a></td>
+        <td><a href="@IJ_CLIENTS@">@IJ_CLIENTS_BASE@</a></td>
+        <td align="center">@IJ_CLIENTS_MD5@ (<a href="@IJ_CLIENTS@.md5">MD5</a>)</td>
         </tr>
       <tr>
         <td><a href="@MATLAB_CLIENTS@"><img src="images/matlab_download.png" alt="Matlab Plugin Download" /></a></td>
         <td align="center">@MATLAB_CLIENTS_SIZE@</td>
-        <td>@MATLAB_CLIENTS_BASE@</td>
-        <td align="center"><a href="@MATLAB_CLIENTS@.md5">Get checksum</a></td>
+        <td><a href="@MATLAB_CLIENTS@">@MATLAB_CLIENTS_BASE@</a></td>
+        <td align="center">@MATLAB_CLIENTS_MD5@ (<a href="@MATLAB_CLIENTS@.md5">MD5</a>)</td>
         </tr>
     </tbody>
   </table>
@@ -164,25 +164,25 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
       <th width="269">Servers</th>
       <th width="89">Size</th>
       <th width="270">File Name</th>
-      <th width="122">MD5 Checksum</th>
+      <th width="122">Checksum</th>
       </tr>
     <tr>
       <td><a href="@SERVER33@"><img src="images/ice3_3_download.png" alt="Ice 3.3 Server Download" /></a></td>
       <td align="center">@SERVER33_SIZE@</td>
-      <td>@SERVER33_BASE@</td>
-        <td align="center"><a href="@SERVER33@.md5">Get checksum</a></td>
+      <td><a href="@SERVER33@">@SERVER33_BASE@</a></td>
+      <td align="center">@SERVER33_MD5@ (<a href="@SERVER33@.md5">MD5</a>)</td>
       </tr>
     <tr>
       <td><a href="@SERVER34@"><img src="images/ice3_4_download.png" alt="Ice 3.4 Server Download" /></a></td>
       <td align="center">@SERVER34_SIZE@</td>
-      <td>@SERVER34_BASE@</td>
-        <td align="center"><a href="@SERVER34@.md5">Get checksum</a></td>
+      <td><a href="@SERVER34@">@SERVER34_BASE@</a></td>
+      <td align="center">@SERVER34_MD5@ (<a href="@SERVER34@.md5">MD5</a>)</td>
       </tr>
     <tr>
       <td><a href="@SERVER35@"><img src="images/ice3_5_download.png" alt="Ice 3.5 Server Download" /></a></td>
       <td align="center">@SERVER35_SIZE@</td>
-      <td>@SERVER35_BASE@</td>
-        <td align="center"><a href="@SERVER35@.md5">Get checksum</a></td>
+      <td><a href="@SERVER35@">@SERVER35_BASE@</a></td>
+      <td align="center">@SERVER35_MD5@ (<a href="@SERVER35@.md5">MD5</a>)</td>
       </tr>
   </tbody>
 </table>
@@ -212,13 +212,13 @@ Windows</a> </p>
       <th width="269">Virtual Appliance</th>
       <th width="91">Size</th>
       <th width="270">File Name</th>
-      <th width="120">MD5 Checksum</th>
+      <th width="120">Checksum</th>
       </tr>
     <tr>
       <td><a href="@VM@"><img src="images/virtual_app_download.png" alt="Virtual Appliance Download" /></a></td>
       <td align="center">@VM_SIZE@</td>
-      <td>@VM_BASE@</td>
-        <td align="center"><a href="@VM@.md5" target="_blank">Get checksum</a></td>
+      <td><a href="@VM@">@VM_BASE@</a></td>
+      <td align="center">@VM_MD5@ (<a href="@VM@.md5">MD5</a>)</td>
       </tr>
   </tbody>
 </table>
@@ -247,8 +247,8 @@ Windows</a> </p>
     <tr>
       <td><a href="@DOCS@"><img src="images/api_download.png" alt="API Documentation Download" /></a></td>
       <td align="center">@DOCS_SIZE@</td>
-      <td>@DOCS_BASE@</td>
-        <td align="center"><a href="@DOCS@.md5">Get checksum</a></td>
+      <td><a href="@DOCS@">@DOCS_BASE@</a></td>
+      <td align="center">@DOCS_MD5@ (<a href="@DOCS@.md5">MD5</a>)</td>
       </tr>
   </tbody>
 </table>
