Fix additional hard-coded version numbers

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -54,8 +54,8 @@
 <a href="@DOC@">PDF documentation</a> and there are user guides for the clients on our <a href="http://help.openmicroscopy.org">Help website</a></p>
 </li>
 <li>
-<p>A standard OMERO user just needs to download the client package with the same major version as their institutional server  e.g.  4.4 
-clients with the 4.4 server</p>
+<p>A standard OMERO user just needs to download the client package with the same major version as their institutional server  e.g. 5.0
+clients with the 5.0 server</p>
 </li>
 </ul>
 
@@ -101,7 +101,7 @@ clients with the 4.4 server</p>
 Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server package, so individual users do not need to install it locally.</p>
 </li>
 <li>
-<p>Full instructions for installing the clients are on the Help website: <a href="http://help.openmicroscopy.org/getting-started-4.html" target="_blank">Getting Started with OMERO.insight Version 4.4.9</a></p>
+<p>Full instructions for installing the clients are on the Help website: <a href="http://help.openmicroscopy.org/getting-started-4.html" target="_blank">Getting Started with OMERO.insight Version @VERSION@</a></p>
 </li>
 </ul>
 
@@ -155,7 +155,7 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
   </li>
 </ul>
 
-<h2><a name="servers" id="servers"></a>OMERO server 4.4.9 downloads</h2>
+<h2><a name="servers" id="servers"></a>OMERO server @VERSION@ downloads</h2>
 <div class="alt-table">
 <table width="800" border="0" cellpadding="5">
   <tbody>
