Fix links to support documentation using DOC_URL token

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -50,7 +50,7 @@
 </li>
 
 <li>
-<p>Full documentation is available as <a href="http://www.openmicroscopy.org/site/support/omero4">web documentation</a>  or
+<p>Full documentation is available as <a href="@DOC_URL@">web documentation</a>  or
 <a href="@DOC@">PDF documentation</a> and there are user guides for the clients on our <a href="http://help.openmicroscopy.org">Help website</a></p>
 </li>
 <li>
@@ -95,9 +95,9 @@ clients with the 4.4 server</p>
 <ul>
 <li>
 <p>Each client package includes 
-<a href="http://www.openmicroscopy.org/site/support/omero4/users/clients-overview.html#omero-insight">OMERO.insight</a>, 
-<a href="http://www.openmicroscopy.org/site/support/omero4/users/clients-overview.html#omero-importer">OMERO.importer</a> and 
-<a href="http://www.openmicroscopy.org/site/support/omero4/users/clients-overview.html#omero-editor">OMERO.editor</a> and requires 
+<a href="@DOC_URL@/users/clients-overview.html#omero-insight">OMERO.insight</a>, 
+<a href="@DOC_URL@/users/clients-overview.html#omero-importer">OMERO.importer</a> and 
+<a href="@DOC_URL@/users/clients-overview.html#omero-editor">OMERO.editor</a> and requires 
 Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server package, so individual users do not need to install it locally.</p>
 </li>
 <li>
@@ -138,7 +138,7 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
 </li>
 <li>
 <p>Instructions for using the Matlab plugin are at:
-<a href="http://www.openmicroscopy.org/site/support/omero4/developers/Matlab.html">OMERO Matlab language bindings</a></p>
+<a href="@DOC_URL@/developers/Matlab.html">OMERO Matlab language bindings</a></p>
 </li>
 </ul>
 
@@ -194,12 +194,12 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
   should work with any version of the server)</p>
 </li>
 <li>
-<p>Installation instructions are available for: <a href="http://www.openmicroscopy.org/site/support/omero4/sysadmins/unix/server-installation.html">Unix  
-platforms</a>, <a href="http://www.openmicroscopy.org/site/support/omero4/sysadmins/windows/server-installation.html">Microsoft 
+<p>Installation instructions are available for: <a href="@DOC_URL@/sysadmins/unix/server-installation.html">Unix  
+platforms</a>, <a href="@DOC_URL@/sysadmins/windows/server-installation.html">Microsoft 
 Windows</a> </p>
 </li>
 <li>
-  <p>Server upgrade instructions are at: <a href="http://www.openmicroscopy.org/site/support/omero4/sysadmins/server-upgrade.html">OMERO.server upgrade</a></p>
+  <p>Server upgrade instructions are at: <a href="@DOC_URL@/sysadmins/server-upgrade.html">OMERO.server upgrade</a></p>
 </ul>
 
 
@@ -228,7 +228,7 @@ Windows</a> </p>
   <p>The OMERO Virtual Appliance allows you to try out an OMERO server on your local machine </p>
   </li>
   <li>
-    <p>Instructions for using the Virtual Appliance are at: <a href="http://www.openmicroscopy.org/site/support/omero4/users/virtual-appliance.html">Virtual Appliance</a></p>
+    <p>Instructions for using the Virtual Appliance are at: <a href="@DOC_URL@/users/virtual-appliance.html">Virtual Appliance</a></p>
   </li>
 </ul>
 
@@ -275,7 +275,7 @@ Windows</a> </p>
 </div>
 <ul>
   <li>
-<p>Instructions for installing the source code can be found at: <a href="http://www.openmicroscopy.org/site/support/omero4/developers/installation.html" target="_blank">Installing OMERO from source</a></p>
+<p>Instructions for installing the source code can be found at: <a href="@DOC_URL@/developers/installation.html" target="_blank">Installing OMERO from source</a></p>
     </li>
 </ul>
 
