Tokenize HELP_URL

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -101,7 +101,7 @@ clients with the 5.0 server</p>
 Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server package, so individual users do not need to install it locally.</p>
 </li>
 <li>
-<p>Full instructions for installing the clients are on the Help website: <a href="http://help.openmicroscopy.org/getting-started-4.html" target="_blank">Getting Started with OMERO.insight Version @VERSION@</a></p>
+<p>Full instructions for installing the clients are on the Help website: <a href="@HELP_URL@" target="_blank">Getting Started with OMERO.insight Version @VERSION@</a></p>
 </li>
 </ul>
 
