Replace OMERO.server Ice 3.5 logo using new icon from Gus

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -178,7 +178,7 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
       <td align="center">@SERVER34_MD5@ (<a href="@SERVER34@.md5">MD5</a>)</td>
       </tr>
     <tr>
-      <td><a href="@SERVER35@"><img src="images/ice3_5_download.png" alt="Ice 3.5 Server Download" /></a></td>
+      <td><a href="@SERVER35@"><img src="images/ice3_5_download_linux.png" alt="Ice 3.5 Server Download" /></a></td>
       <td align="center">@SERVER35_SIZE@</td>
       <td>@SERVER35_BASE@</td>
       <td align="center">@SERVER35_MD5@ (<a href="@SERVER35@.md5">MD5</a>)</td>
