Add sentence about Ice 3.5/Windows limitations with link to the doc

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -188,7 +188,9 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
 </div>
 
 <ul>
-  <li>
+<li>
+<p>If you are using Windows, we recommend you default to using Ice 3.4 and the Ice 3.4 server. The Ice 3.5 server is not supported on Windows because Ice 3.5 requires Python 3, which OMERO does not support (see the <a href="@DOC_URL@/sysadmins/limitations.html#windows-os-issues">limitations page</a>)</p>
+<li>
 <p>Download the
   server matching  the Ice version you are using (note that the client(s)
   should work with any version of the server)</p>
