Modify wording of Windows OMERO.server warning about Ice 3.5

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -189,7 +189,7 @@ Java Version <strong>1.6</strong> or higher. OMERO.web is part of the server pac
 
 <ul>
 <li>
-<p>If you are using Windows, we recommend you default to using Ice 3.4 clients and the Ice 3.4 server. The Ice 3.5 server is not supported on Windows because Ice 3.5 requires Python 3, which OMERO does not support (see the <a href="@DOC_URL@/sysadmins/limitations.html#windows-os-issues">Known Limitations</a> page for more detail)</p>
+<p>If you are using Windows, we recommend you default to using OMERO.server with Ice 3.4. The Ice 3.5 server is not supported on Windows because Ice 3.5 requires Python 3, which OMERO does not yet support (see the <a href="@DOC_URL@/sysadmins/limitations.html#windows-os-issues">Known Limitations</a> page for more detail)</p>
 <li>
 <p>Download the
   server matching  the Ice version you are using (note that the client(s)
