Add note about other versions of the API documentation

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -255,6 +255,12 @@ Windows</a> </p>
 </table>
 </div>
 
+<ul>
+  <li>
+<p>Other versions of the API documentation are available <a href="artifacts">here</a></p>
+  </li>
+</ul>
+
 <h2><a name="code" id="code"></a>Checking out the code</h2>
 
 <div class="alt-table">
