Fix artifact name substitution

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -65,19 +65,19 @@
       <tr>
         <td><a href="@LOCI_TOOLS@"><img src="images/bf_loci_tools.png" alt="LOCI Tools" /></a></td>
         <td align="center">@LOCI_TOOLS_SIZE@</td>
-        <td>@LOCI_TOOLS_NAME@</td>
+        <td>@LOCI_TOOLS_BASE@</td>
         <td align="center">@LOCI_TOOLS_MD5@ (<a href="@LOCI_TOOLS@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@COMMAND_LINE_TOOLS@"><img src="images/bf_cm_tools.png" alt="Command Line Tools" /></a></td>
         <td align="center">@COMMAND_LINE_TOOLS_SIZE@</td>
-        <td>@COMMAND_LINE_TOOLS_NAME@</td>
+        <td>@COMMAND_LINE_TOOLS_BASE@</td>
         <td align="center">@COMMAND_LINE_TOOLS@ (<a href="@COMMAND_LINE_TOOLS@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@MATLAB_TOOLS@"><img src="images/bf_matlab_toolbox.png" alt="MATLAB Toolbox" /></a></td>
         <td align="center">@MATLAB_TOOLS_SIZE@</td>
-        <td>@MATLAB_TOOLS_NAME@</td>
+        <td>@MATLAB_TOOLS_BASE@</td>
         <td align="center">@MATLAB_TOOLS_MD5@ (<a href="@MATLAB_TOOLS@.md5">MD5</a>)</td>
       </tr>
     </tbody>
@@ -86,14 +86,14 @@
 
 <ul>
 <li>
-<p>@LOCI_TOOLS_NAME@ is complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
+<p>@LOCI_TOOLS_BASE@ is complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
 <a href="@DOC_URL@/users/imagej/installing.html">user guide</a>.</p>
 </li>
 <li>
-<p>@COMMAND_LINE_TOOLS_NAME@ is a bundle of scripts for using Bio-Formats on the command line.</p>
+<p>@COMMAND_LINE_TOOLS_BASE@ is a bundle of scripts for using Bio-Formats on the command line.</p>
 </li>
 <li>
-<p>@MATLAB_TOOLS_NAME@ is a bundle of functions for using Bio-Formats from MATLAB.</p>
+<p>@MATLAB_TOOLS_BASE@ is a bundle of functions for using Bio-Formats from MATLAB.</p>
 </li>
 </ul>
 
