Fix command line tools MD5 substitution

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -72,7 +72,7 @@
         <td><a href="@COMMAND_LINE_TOOLS@"><img src="images/bf_cm_tools.png" alt="Command Line Tools" /></a></td>
         <td align="center">@COMMAND_LINE_TOOLS_SIZE@</td>
         <td>@COMMAND_LINE_TOOLS_BASE@</td>
-        <td align="center">@COMMAND_LINE_TOOLS@ (<a href="@COMMAND_LINE_TOOLS@.md5">MD5</a>)</td>
+        <td align="center">@COMMAND_LINE_TOOLS_MD5@ (<a href="@COMMAND_LINE_TOOLS@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@MATLAB_TOOLS@"><img src="images/bf_matlab_toolbox.png" alt="MATLAB Toolbox" /></a></td>
