Fix @VERSION@ token in the components table

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -59,7 +59,7 @@
       <tr>
         <th width="269">Clients</th>
         <th width="85">Size</th>
-        <th width="271">File Name</th>
+        <th width="150">File Name</th>
         <th width="125">Checksum</th>
         </tr>
       <tr>
@@ -104,7 +104,7 @@
     <tbody>
       <tr>
         <th width="180">Project</th>
-        <th width="150">@VERSION</th>
+        <th width="150">@VERSION@</th>
         <th width="150">Trunk build</th>
         <th width="150">Daily build</th>
         </tr>
