Add notes about downloads

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -46,7 +46,13 @@
 
 <ul>
 <li>
-<p>Full documentation is available as <a href="@DOC_URL@">web documentation</a>  or <a href="@DOC@">PDF documentation</a>.</p>
+<p>Full documentation is available as <a href="@DOC_URL@">web documentation</a> or <a href="@DOC@">PDF documentation</a>.</p>
+</li>
+<li>
+<p>Internet Explorer sometimes renames JAR files to ZIP (e.g., loci_tools.jar becomes loci_tools.zip); if this happens to you, simply rename the file back to its original name after the download is complete.</p>
+</li>
+<li>
+<p>For some browsers, you may need to right-click or control-click the link and choose "Save link as..." or a similar option to download the file.</p>
 </li>
 </ul>
 
