Add logic to retrieve Bio-Formats tag and add icon to source section

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -233,7 +233,10 @@
       </tr>
     <tr>
       <td><a href="http://git.openmicroscopy.org/" target="_blank"><img src="images/gitweb_int_link.png" alt="Gitweb Interface Link" /></a></td>
-      </tr>
+     </tr>
+    <tr>
+      <td><a href="@TAG_URL@" target="_blank"><img src="images/git_tag.png" alt="GitHub Tag" /></a></td>
+    </tr>
   </tbody>
 </table>
 </div>
