Add links to the API documentation to the downloads page

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -49,6 +49,9 @@
 <p>Full documentation is available as <a href="@DOC_URL@">web documentation</a> or <a href="@DOC@">PDF documentation</a>.</p>
 </li>
 <li>
+<p>The Bio-Formats API documentation is available <a href="api">here</a></p>
+</li>
+<li>
 <p>Internet Explorer sometimes renames JAR files to ZIP (e.g., loci_tools.jar becomes loci_tools.zip); if this happens to you, simply rename the file back to its original name after the download is complete.</p>
 </li>
 <li>
