--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -257,7 +257,10 @@ Windows</a> </p>
 
 <ul>
   <li>
-<p>Other versions of the API documentation are available <a href="artifacts">here</a></p>
+  <p>The OMERO API documentation is available <a href="api">here</a></p>
+  </li>
+  <li>
+  <p>Other versions of the API documentation are available <a href="artifacts">here</a></p>
   </li>
 </ul>
 
