Rename latest JARs column title

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -114,7 +114,7 @@
       <tr>
         <th width="180">Project</th>
         <th width="150">@VERSION@</th>
-        <th width="150">Trunk build</th>
+        <th width="150">Latest build</th>
         <th width="150">Daily build</th>
         </tr>
 	<tr>
