Expose bioformats_package on the Bio-Formats downloads page
- Promote the new bioformats_package.jar on the main downloads page
- Move the deprecated loci_tools.jar to the components section
- Use new icons for the tools downloads

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -70,12 +70,12 @@
         <th width="85">Size</th>
         <th width="150">File Name</th>
         <th width="125">Checksum</th>
-        </tr>
+      </tr>
       <tr>
-        <td><a href="@LOCI_TOOLS@"><img src="images/bf_loci_tools.png" alt="LOCI Tools" /></a></td>
-        <td align="center">@LOCI_TOOLS_SIZE@</td>
-        <td>@LOCI_TOOLS_BASE@</td>
-        <td align="center">@LOCI_TOOLS_MD5@ (<a href="@LOCI_TOOLS@.md5">MD5</a>)</td>
+        <td><a href="@BF_PACKAGE@"><img src="images/bf_package.png" alt="Bio-Formats Package" /></a></td>
+        <td align="center">@BF_PACKAGE_SIZE@</td>
+        <td>@BF_PACKAGE_BASE@</td>
+        <td align="center">@BF_PACKAGE_MD5@ (<a href="@BF_PACKAGE@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@COMMAND_LINE_TOOLS@"><img src="images/bf_cm_tools.png" alt="Command Line Tools" /></a></td>
@@ -95,7 +95,7 @@
 
 <ul>
 <li>
-<p>@LOCI_TOOLS_BASE@ is complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
+<p>@BF_PACKAGE_BASE@ is the complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
 <a href="@DOC_URL@/users/imagej/installing.html">user guide</a>.</p>
 </li>
 <li>
@@ -167,6 +167,12 @@
 		<td><a href="@specification.jar@">specification.jar</a></td>
 		<td><a href="@LATEST_specification.jar@">specification.jar</a></td>
 		<td><a href="@DAILY_specification.jar@">specification.jar</a></td>
+		</tr>
+		<tr>
+		<td>LOCI Tools</td>
+		<td><a href="@loci_tools.jar@">loci_tools.jar</a></td>
+		<td><a href="@LATEST_loci_tools.jar@">loci_tools.jar</a></td>
+		<td><a href="@DAILY_loci_tools.jar@">loci_tools.jar</a></td>
 		</tr>
 		<tr>
 		<td>LOCI Plugins for ImageJ</td>
