Add source zip to the source code section in the OMERO downloads page

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -271,13 +271,16 @@ Windows</a> </p>
   <tbody>
     <tr>
       <th width="264">Source Code</th>
-      </tr>
+    </tr>
+    <tr>
+      <td><a href="@SOURCE_CODE@" target="_blank"><img src="images/ome_source_code.png" alt="Zipped Source Code" /></a></td>
+    </tr>
     <tr>
       <td><a href="http://github.com/openmicroscopy/openmicroscopy" target="_blank"><img src="images/github_rep_link.png" alt="GitHub Repository Link" /></a></td>
-      </tr>
+    </tr>
     <tr>
       <td><a href="http://git.openmicroscopy.org/" target="_blank"><img src="images/gitweb_int_link.png" alt="Gitweb Interface Link" /></a></td>
-      </tr>
+    </tr>
     <tr>
       <td><a href="@TAG_URL@" target="_blank"><img src="images/git_tag.png" alt="GitHub Tag" /></a></td>
     </tr>
