Add file size, file name and md5 to source zip

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -267,13 +267,29 @@ Windows</a> </p>
 <h2><a name="code" id="code"></a>Checking out the code</h2>
 
 <div class="alt-table">
+<table width="800" border="0" cellpadding="5">
+  <tbody>
+    <tr>
+      <th width="269">Source Code</th>
+      <th width="91">Size</th>
+      <th width="270">File Name</th>
+      <th width="120">Checksum</th>
+      </tr>
+    <tr>
+      <td><a href="@SOURCE_CODE@" target="_blank"><img src="images/ome_source_code.png" alt="Zipped Source Code" /></a></td>
+      <td align="center">@SOURCE_CODE_SIZE@</td>
+      <td>@SOURCE_CODE_BASE@</td>
+      <td align="center">@SOURCE_CODE_MD5@ (<a href="@SOURCE_CODE@.md5">MD5</a>)</td>
+      </tr>
+  </tbody>
+</table>
+</div>
+
+<div class="alt-table">
 <table width="278" border="0" cellpadding="5">
   <tbody>
     <tr>
-      <th width="264">Source Code</th>
-    </tr>
-    <tr>
-      <td><a href="@SOURCE_CODE@" target="_blank"><img src="images/ome_source_code.png" alt="Zipped Source Code" /></a></td>
+      <th width="264">Source Code Links</th>
     </tr>
     <tr>
       <td><a href="http://github.com/openmicroscopy/openmicroscopy" target="_blank"><img src="images/github_rep_link.png" alt="GitHub Repository Link" /></a></td>
