--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -49,7 +49,7 @@
 <p>Full documentation is available as <a href="@DOC_URL@">web documentation</a> or <a href="@DOC@">PDF documentation</a>.</p>
 </li>
 <li>
-<p>Internet Explorer sometimes renames JAR files to ZIP (e.g., loci_tools.jar becomes loci_tools.zip); if this happens to you, simply rename the file back to its original name after the download is complete.</p>
+<p>Internet Explorer sometimes renames JAR files to ZIP (e.g., bioformats_package.jar becomes bioformats_package.zip); if this happens to you, simply rename the file back to its original name after the download is complete.</p>
 </li>
 <li>
 <p>For some browsers, you may need to right-click or control-click the link and choose "Save link as..." or a similar option to download the file.</p>
