--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -290,7 +290,7 @@ Windows</a> </p>
     </li>
 </ul>
 
-<h2><a name="components" id="components"></a>Build components</h2>
+<h2><a name="components" id="components"></a><a name="artifacts" id="artifacts"></a>Build components</h2>
 
 <ul>
   <li>
