Rename build components as downloads components

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -290,11 +290,11 @@ Windows</a> </p>
     </li>
 </ul>
 
-<h2><a name="components" id="components"></a><a name="artifacts" id="artifacts"></a>Build components</h2>
+<h2><a name="components" id="components"></a><a name="artifacts" id="artifacts"></a>Downloads components</h2>
 
 <ul>
   <li>
-<p>All build components available for this version of OMERO are available <a href="artifacts">here</a></p>
+<p>All downloads components available for this version of OMERO are available <a href="artifacts">here</a></p>
   </li>
 </ul>
 
