--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -145,6 +145,12 @@
 		<th align="center"colspan="4">Core</th>
 	</tr>
 	<tr>
+		<td>Bio-Formats package</td>
+		<td><a href="@BF_PACKAGE@">bioformats_package.jar</a></td>
+		<td><a href="@LATEST_BF_PACKAGE@">bioformats_package.jar</a></td>
+		<td><a href="@DAILY_BF_PACKAGE@">bioformats_package.jar</a></td>
+	</tr>
+		<tr>
 		<td>Bio-Formats library</td>
 		<td><a href="@bio-formats.jar@">bio-formats.jar</a></td>
 		<td><a href="@LATEST_bio-formats.jar@">bio-formats.jar</a></td>
