Use bio-formats.jar instead of the alias everywhere

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -69,10 +69,10 @@
         <th width="125">Checksum</th>
       </tr>
       <tr>
-        <td><a href="@BF_PACKAGE@"><img src="images/bf_package.png" alt="Bio-Formats Package" /></a></td>
-        <td align="center">@BF_PACKAGE_SIZE@</td>
-        <td>@BF_PACKAGE_BASE@</td>
-        <td align="center">@BF_PACKAGE_MD5@ (<a href="@BF_PACKAGE@.md5">MD5</a>)</td>
+        <td><a href="@bioformats_package.jar@"><img src="images/bioformats_package.jar.png" alt="Bio-Formats Package" /></a></td>
+        <td align="center">@bioformats_package.jar_SIZE@</td>
+        <td>@bioformats_package.jar_BASE@</td>
+        <td align="center">@bioformats_package.jar_MD5@ (<a href="@bioformats_package.jar@.md5">MD5</a>)</td>
       </tr>
       <tr>
         <td><a href="@COMMAND_LINE_TOOLS@"><img src="images/bf_cm_tools.png" alt="Command Line Tools" /></a></td>
@@ -92,7 +92,7 @@
 
 <ul>
 <li>
-<p>@BF_PACKAGE_BASE@ is the complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
+<p>@bioformats_package.jar_BASE@ is the complete bundle (for end users) containing everything needed to read images into ImageJ using Bio-Formats. Instructions for installing Bio-Formats in ImageJ are available in the
 <a href="@DOC_URL@/users/imagej/installing.html">user guide</a>.</p>
 </li>
 <li>
@@ -126,7 +126,7 @@
 
 <ul>
   <li>
-  <p>The Bio-Formtats API documentation is also available to read on the web <a href="api">here</a></p>
+  <p>The Bio-Formats API documentation is also available to read on the web <a href="api">here</a></p>
   </li>
 </ul>
 
@@ -146,9 +146,9 @@
 	</tr>
 	<tr>
 		<td>Bio-Formats package</td>
-		<td><a href="@BF_PACKAGE@">bioformats_package.jar</a></td>
-		<td><a href="@LATEST_BF_PACKAGE@">bioformats_package.jar</a></td>
-		<td><a href="@DAILY_BF_PACKAGE@">bioformats_package.jar</a></td>
+		<td><a href="@bioformats_package.jar@">bioformats_package.jar</a></td>
+		<td><a href="@LATEST_bioformats_package.jar@">bioformats_package.jar</a></td>
+		<td><a href="@DAILY_bioformats_package.jar@">bioformats_package.jar</a></td>
 	</tr>
 		<tr>
 		<td>Bio-Formats library</td>
