Fix erroneously replaced bfpackage icon link

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -69,7 +69,7 @@
         <th width="125">Checksum</th>
       </tr>
       <tr>
-        <td><a href="@bioformats_package.jar@"><img src="images/bioformats_package.jar.png" alt="Bio-Formats Package" /></a></td>
+        <td><a href="@bioformats_package.jar@"><img src="images/bf_package.png" alt="Bio-Formats Package" /></a></td>
         <td align="center">@bioformats_package.jar_SIZE@</td>
         <td>@bioformats_package.jar_BASE@</td>
         <td align="center">@bioformats_package.jar_MD5@ (<a href="@bioformats_package.jar@.md5">MD5</a>)</td>
