Rename testing framework row

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -214,7 +214,7 @@
 		<td><a href="@DAILY_metakit.jar@">metakit.jar</a></td>
 	</tr>
 	<tr>
-	<td>LOCI testing framework</td>
+	<td>Bio-Formats testing framework</td>
 		<td><a href="@bio-formats-testing-framework.jar@">bio-formats-testing-framework.jar</a></td>
 		<td><a href="@LATEST_bio-formats-testing-framework.jar@">bio-formats-testing-framework.jar</a></td>
 		<td><a href="@DAILY_bio-formats-testing-framework.jar@">bio-formats-testing-framework.jar</a></td>
