--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -142,7 +142,7 @@
         <th width="150">Daily build</th>
         </tr>
 	<tr>
-		<th align="center"colspan="4">Core</th>
+		<th align="center"colspan="4">Packages</th>
 	</tr>
 	<tr>
 		<td>Bio-Formats package</td>
