--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -96,10 +96,10 @@
 <a href="@DOC_URL@/users/imagej/installing.html">user guide</a>.</p>
 </li>
 <li>
-<p>@COMMAND_LINE_TOOLS_BASE@ is a bundle of scripts for using Bio-Formats on the command line <b>now with bioformats_package.jar included so you do not have to install both separately<b/>. See the <a href="@DOC_URL@/users/comlinetools/index.html">command line tools documentation</a> for further information.</p>
+<p>@COMMAND_LINE_TOOLS_BASE@ is a bundle of scripts for using Bio-Formats on the command line <b>now with bioformats_package.jar included so you do not have to install both separately</b>. See the <a href="@DOC_URL@/users/comlinetools/index.html">command line tools documentation</a> for further information.</p>
 </li>
 <li>
-<p>@MATLAB_TOOLS_BASE@ is a bundle of functions for using Bio-Formats from MATLAB <b>now with bioformats_package.jar included so you do not have to install both separately<b/>. See the <a href="@DOC_URL@/users/matlab/index.html">MATLAB documentation</a> for further information.</p>
+<p>@MATLAB_TOOLS_BASE@ is a bundle of functions for using Bio-Formats from MATLAB <b>now with bioformats_package.jar included so you do not have to install both separately</b>. See the <a href="@DOC_URL@/users/matlab/index.html">MATLAB documentation</a> for further information.</p>
 </li>
 </ul>
 
