--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -66,13 +66,13 @@
         <th width="125">Checksum</th>
         </tr>
       <tr>
-        <td><a href="@FLIMFIT_50_WIN@"><img src="images/windows_download.png" alt="Windows Client Download" /></a></td>
+        <td><a href="@FLIMFIT_50_WIN@"><img src="images/flimfit_win.png" alt="Windows Client Download" /></a></td>
         <td align="center">@FLIMFIT_50_WIN_SIZE@</td>
         <td>@FLIMFIT_50_WIN_BASE@</td>
         <td align="center">@FLIMFIT_50_WIN_MD5@ (<a href="@FLIMFIT_50_WIN@.md5">MD5</a>)</td>
       </tr>
       <tr>
-        <td><a href="@FLIMFIT_50_MAC@"><img src="images/mac_download.png" alt="Mac OS X Client Download" /></a></td>
+        <td><a href="@FLIMFIT_50_MAC@"><img src="images/flimfit_mac.png" alt="Mac OS X Client Download" /></a></td>
         <td align="center">@FLIMFIT_50_MAC_SIZE@</td>
         <td>@FLIMFIT_50_MAC_BASE@</td>
         <td align="center">@FLIMFIT_50_MAC_MD5@ (<a href="@FLIMFIT_50_MAC@.md5">MD5</a>)</td>
@@ -92,13 +92,13 @@
         <th width="125">Checksum</th>
         </tr>
       <tr>
-        <td><a href="@FLIMFIT_44_WIN@"><img src="images/windows_download.png" alt="Windows Client Download" /></a></td>
+        <td><a href="@FLIMFIT_44_WIN@"><img src="images/flimfit_win.png" alt="Windows Client Download" /></a></td>
         <td align="center">@FLIMFIT_44_WIN_SIZE@</td>
         <td>@FLIMFIT_44_WIN_BASE@</td>
         <td align="center">@FLIMFIT_44_WIN_MD5@ (<a href="@FLIMFIT_44_WIN@.md5">MD5</a>)</td>
       </tr>
       <tr>
-        <td><a href="@FLIMFIT_44_MAC@"><img src="images/mac_download.png" alt="Mac OS X Client Download" /></a></td>
+        <td><a href="@FLIMFIT_44_MAC@"><img src="images/flimfit_mac.png" alt="Mac OS X Client Download" /></a></td>
         <td align="center">@FLIMFIT_44_MAC_SIZE@</td>
         <td>@FLIMFIT_44_MAC_BASE@</td>
         <td align="center">@FLIMFIT_44_MAC_MD5@ (<a href="@FLIMFIT_44_MAC@.md5">MD5</a>)</td>
