Add note from old downloads page and link to the source code

--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -41,17 +41,18 @@
 <h2>FLIMFit @VERSION@ Downloads</h2>
 
 <p>
-  <strong><a href="#flimfit_50">OME 5.0</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#flimfit_44">OME 4.4</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#legacy">Legacy</a> </strong></p>
+  <strong><a href="#flimfit_50">OME 5.0</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#flimfit_44">OME 4.4</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#legacy">Legacy</a> </strong></p>
 
 <ul>
+<li>
+<p>Mac users, please note that in order to run FLIMfit you will need the MATLAB Compiler Runtime (MCR) which enables the execution of compiled MATLAB applications or components on computers that do not have MATLAB installed. It can be downloaded from <a href="http://www.mathworks.co.uk/products/compiler/mcr/">MATLAB Compiler Runtime (MCR)</a>. The Windows Installer will automatically install the MCR. </p>
+</li>
 
 <li>
-<p>Full documentation is available as <a href="@DOC_URL@">web documentation</a>  or
-<a href="@DOC@">PDF documentation</a> and there are user guides for the clients on our <a href="http://help.openmicroscopy.org">Help website</a></p>
-</li>
-<li>
-<p>To use the compiled version below, you will need to download the MATLAB
-	MCR corresponding to your system.</p>
+<p>Please explicitly acknowledge "the FLIMfit software tool developed at Imperial College London" in any publications benefitting from its use.  In order for us to monitor the use of FLIMfit and to support its ongoing development, we would be grateful if you could send details of any such publications (particularly DOIs of published papers) to: <a href="mailto:FLIMfit@imperial.ac.uk">FLIMfit@imperial.ac.uk</a>.
+</p>
+<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the <a href="http://www.gnu.org/copyleft/gpl.html">GNU General Public License</a> for more details.
+</p>
 </li>
 </ul>
 
@@ -105,6 +106,21 @@
         </tr>
     </tbody>
   </table>
+</div>
+
+<h2><a name="code" id="code"></a>Checking out the code</h2>
+
+<div class="alt-table">
+<table width="278" border="0" cellpadding="5">
+  <tbody>
+    <tr>
+      <th width="264">Source Code Links</th>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/openmicroscopy/Imperial-FLIMFit" target="_blank"><img src="images/github_rep_link.png" alt="GitHub Repository Link" /></a></td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
 <h2><a name="legacy" id="legacy"></a>Legacy versions</h2>
