--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -54,6 +54,9 @@
 <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the <a href="http://www.gnu.org/copyleft/gpl.html">GNU General Public License</a> for more details.
 </p>
 </li>
+<li>
+<p>Users who intend to use FLIMfit without OMERO can download either version (for 4.4.x or 5.0.x) as there will be no difference in stand-alone mode.</p>
+</li>
 </ul>
 
 <h2><a name="flimfit_50" id="flimfit_50"></a>FLIMFit downloads for OME 5.0.x</h2>
