Fix u-track downloads page
- Remove unnecessary top level menu
- Replace Source code by downloads
- Add a get started line

--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -40,22 +40,13 @@
 
 <h2>u-track @VERSION@ Downloads</h2>
 
-<p>
-  <strong><a href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#legacy">Previous versions</a> </strong></p>
-
 <ul>
 <li>
-<p>The software is currently distributed as a source code bundle and requires MATLAB to be installed with some toolboxes described in the documentation.</a>.</p>
-</li>
-<li>
-<p>Full documentation is available as <a href="@DOC@">PDF documentation</a>.</p>
-</li>
-<li>
-<p>To use u-track without OMERO, you will need to download the OMERO.matlab toolbox corresponding to your server in addition to the u-track source code.</p>
+<p>The software is currently distributed as a source code bundle and requires MATLAB to be installed with some toolboxes described in the <a href="@DOC@">PDF documentation</a>.</p>
 </li>
 </ul>
 
-<h2><a name="code" id="code"></a>Source code</h2>
+<h2><a name="code" id="code"></a>Downloads</h2>
 
 <div class="alt-table">
 <table width="800" border="0" cellpadding="5">
@@ -75,6 +66,16 @@
   </tbody>
 </table>
 </div>
+
+<ul>
+<li>
+<p>To use u-track with OMERO, you will need to download the OMERO.matlab toolbox corresponding to your server in addition to the source code.</p>
+</li>
+<li>
+<p>To get started, download the zipped code, unextract it and add it to your MATLAB path. Then start the software by entering <code>movieSelectorGUI</code> at the MATLAB command prompt.</p>
+</li>
+
+</ul>
 
 <h2><a name="legacy" id="legacy"></a>Previous versions</h2>
 
