Add link to OMERO downloads page

--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -69,10 +69,10 @@
 
 <ul>
 <li>
-<p>To use u-track with OMERO, you will need to download the OMERO.matlab toolbox corresponding to your server in addition to the source code.</p>
+<p>To use u-track with OMERO, you will need to download the OMERO.matlab toolbox corresponding to your server from the <a href="http://downloads.openmicroscopy.org/omero">OMERO downloads folders</a> in addition to the zipped code.</p>
 </li>
 <li>
-<p>To get started, download the zipped code, unextract it and add it to your MATLAB path. Then start the software by entering <code>movieSelectorGUI</code> at the MATLAB command prompt.</p>
+<p>To get started, download the zipped code, unextract it and add it with its subfolders to your MATLAB path. Then launch the software by entering <code>movieSelectorGUI</code> at the MATLAB command prompt.</p>
 </li>
 
 </ul>
@@ -81,7 +81,7 @@
 
 <ul>
   <li>
-<p>We recommend that you always use the most recent release version of the u-track software, but if you need to use a previous version,  they are all available from the main <a href="http://downloads.openmicroscopy.org/u-track/?C=M;O=D">downloads folder</a></p>
+<p>We recommend that you always use the most recent release version of the u-track software, but if you need to use a previous version, they are all available from the main <a href="http://downloads.openmicroscopy.org/u-track/?C=M;O=D">downloads folder</a></p>.
   </li>
 </ul>
   
