--- a/webtagging_downloads.html
+++ b/webtagging_downloads.html
@@ -54,7 +54,7 @@
 </li>
 </ul>
 
-<h2>/a>Ddownloads</h2>
+<h2>Downloads</h2>
 
 <div class="alt-table">
   <table width="800" border="0" cellpadding="5">
